--- a/public/style.css
+++ b/public/style.css
@@ -124,3 +124,23 @@ body{
     border-radius: 5px;
     border: 1px solid #ccc;
 }
+
+
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
